sonar nits